unpackaged/main/default/objects/LoanApplicantEmployment/LoanApplicantEmployment.object-meta.xml
<CustomObject>
    <sharingModel>Private</sharingModel>
</CustomObject>