unpackaged/main/default/objects/LoanApplicantEmployment/fields/CurrentJobOver3Years__c.field-meta.xml
<CustomField>
    <fullName>CurrentJobOver3Years__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Have you worked here for 3 or more years</label>
    <type>Checkbox</type>
</CustomField>