unpackaged/main/default/objects/LoanApplicantEmployment/fields/isGovernmentalBody__c.field-meta.xml
<CustomField>
    <fullName>isGovernmentalBody__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is your employer a local, state or federal government body?</inlineHelpText>
    <label>is Governmental Body</label>
    <type>Checkbox</type>
</CustomField>