unpackaged/main/default/objects/LoanApplicantEmployment/listViews/All_LoanApplicantEmployments.listView-meta.xml
<ListView>
    <fullName>All_LoanApplicantEmployments</fullName>
    <filterScope>Everything</filterScope>
    <label>All Loan Applicant Employments</label>
</ListView>